--- a/src/components/podcast/VideoPlayerPod.module.css
+++ b/src/components/podcast/VideoPlayerPod.module.css
@@ -1,412 +1,87 @@
-/* Estilos para telas grandes */
-@media (min-width: 1200px) {
-    .videoComponent {
-        grid-column: 1 / 13;
-        font-family: 'Roboto', sans-serif;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 9rem 19rem 3rem;
-        justify-content: center;
-        background-color: #FCBA5A;
-        border-top-left-radius: 100px;
-    }
-
-    .formaLinha {
-        grid-row: 2;
-        width: 100%;
-        height: auto;
-        object-fit: contain;
-        object-position: center;
-    }
-
-    .playerContent {
-        flex: 2 1 100%;
-        grid-column: 4 / 10;
-        grid-row: 2 / 4;
-    }
-
-    .playerHeader {
-        grid-column: 4 / 10;
-        grid-row: 1;
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-        margin: 2rem 0;
-    }
-
-    .playerHeader img {
-        height: 4rem;
-    }
-
-    .playerTitle {
-        flex: 1;
-        border-top: 3px solid #eee;
-        padding: 1rem 1rem;
-        color: #6F2282;
-        font-weight: 500;   
-    }
-
-    .playerTitle span {
-        font-weight: 600;
-        text-transform: uppercase;
-    }
-
-    .playerTitle p {
-        padding-top: 1rem;
-        font-family: 'Roboto Condensed', sans-serif;
-        color: black;
-        font-weight: 400;
-        font-size: .90rem;
-    }
-
-    .playerVideo {
-        grid-column: 4 / 8;
-        grid-row: 2;
-        height: 30rem;
-        flex: 1 100%;
-    }
-
-    .playerContent {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .videoFooter {
-        flex: 1 100%;
-        align-content: start;
-        font-size: .75rem;
-    }
-
-    .videoFooter p {
-        text-align: end;
-    }
-
-    .borda {
-        grid-column: 1;
-        grid-row: 1;
-    }
+.videoContainer {
+    grid-column: 1 / 13;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+    justify-content: center;
+    background-color: #FCBA5A; /* Fundo laranja */
+    padding: 1rem;
+    position: relative;
+    overflow: hidden;
 }
 
-/* Estilos para telas médias */
-@media (max-width: 1200px) and (min-width: 992px) {
-    .videoComponent {
-        grid-column: 1 / 13;
-        font-family: 'Roboto', sans-serif;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 9rem 30rem 3rem;
-        justify-content: center;
-        background-color: #FCBA5A;
-        border-top-left-radius: 100px;
-    }
-
-    .formaLinha {
-        grid-row: 2;
-        width: 100%;
-        height: auto;
-        object-fit: contain;
-        object-position: center;
-    }
-
-    .playerContent {
-        flex: 2 1 100%;
-        grid-column: 4 / 10;
-        grid-row: 2 / 4;
-    }
-
-    .playerHeader {
-        grid-column: 4 / 10;
-        grid-row: 1;
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-        margin: 2rem 0;
-    }
-
-    .playerHeader img {
-        height: 4rem;
-    }
-
-    .playerTitle {
-        flex: 1;
-        border-top: 3px solid #eee;
-        padding: 1rem 1rem;
-        color: #6F2282;
-        font-weight: 500;   
-    }
-
-    .playerTitle span {
-        font-weight: 600;
-        text-transform: uppercase;
-    }
-
-    .playerTitle p {
-        padding-top: 1rem;
-        font-family: 'Roboto Condensed', sans-serif;
-        color: black;
-        font-weight: 400;
-        font-size: .90rem;
-    }
-
-    .playerVideo {
-        grid-column: 4 / 8;
-        grid-row: 2;
-        height: 30rem;
-        flex: 1 100%;
-    }
-
-    .playerContent {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    .videoFooter {
-        flex: 1 100%;
-        align-content: start;
-        font-size: .75rem;
-    }
-
-    .videoFooter p {
-        text-align: end;
-    }
-
-    .borda {
-        grid-column: 1;
-        grid-row: 1;
-    }
+.videoBox {
+    grid-column: 3 / 11; /* Ajustado para melhor centralização */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
 }
 
-/* Estilos para telas pequenas */
-@media (max-width: 992px) and (min-width: 768px) {
-    .videoComponent {
-        grid-column: 1 / 13;
-        font-family: 'Roboto', sans-serif;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 9rem 50rem 3rem;
-        justify-content: center;
-        background-color: #FCBA5A;
-        border-top-left-radius: 100px;
-    }
+.playerWrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
-    .formaLinha {
-        display: none; /* Esconde a forma linha */
-    }
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Garante que o vídeo se ajuste sem tarjas pretas */
+    cursor: pointer;
+}
 
-    .playerContent {
+.formaLinha1, .formaLinha2 {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100px; /* Ajuste o tamanho conforme necessário */
+    height: auto;
+}
+
+.formaLinha1 {
+    left: 0;
+}
+
+.formaLinha2 {
+    right: 0;
+}
+
+@media (max-width: 768px) {
+    .videoBox {
         grid-column: 2 / 12;
-        grid-row: 2 / 4;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 
-    .playerHeader {
-        grid-column: 2 / 12;
-        grid-row: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem 0;
-    }
-
-    .playerHeader img {
-        height: 4rem;
-    }
-
-    .playerTitle {
-        flex: 1;
-        border-top: 3px solid #eee;
-        padding: 1rem;
-        color: #6F2282;
-        font-weight: 500;
-        text-align: center;
-    }
-
-    .playerTitle span {
-        font-weight: 600;
-        text-transform: uppercase;
-    }
-
-    .playerTitle p {
-        padding-top: 1rem;
-        font-family: 'Roboto Condensed', sans-serif;
-        color: black;
-        font-weight: 400;
-        font-size: 0.9rem;
-    }
-
-    .playerVideo {
+    .video {
         width: 100%;
-        height: 50rem;
+        height: 100%;
     }
 
-    .videoFooter {
-        grid-column: 2 / 12;
-        text-align: center;
-        font-size: 0.75rem;
-        margin-top: 1rem;
-    }
-
-    .borda {
+    .formaLinha1, .formaLinha2 {
         display: none;
     }
 }
 
-/* Estilos para tablets e smartphones */
-@media (max-width: 768px) and (min-width: 576px) {
-    .videoComponent {
-        grid-column: 1 / 13;
-        font-family: 'Roboto', sans-serif;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 9rem 30rem 3rem;
-        justify-content: center;
-        background-color: #FCBA5A;
-        border-top-left-radius: 100px;
-    }
-
-    .formaLinha {
-        display: none; /* Esconde a forma linha */
-    }
-
-    .playerContent {
-        grid-column: 2 / 12;
-        grid-row: 2 / 4;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .playerHeader {
-        grid-column: 2 / 12;
-        grid-row: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 2rem 0;
-    }
-
-    .playerHeader img {
-        height: 3rem;
-    }
-
-    .playerTitle {
-        flex: 1;
-        border-top: 2px solid #eee;
-        padding: 0.8rem;
-        color: #6F2282;
-        font-weight: 500;
-        text-align: center;
-    }
-
-    .playerTitle span {
-        font-weight: 600;
-        text-transform: uppercase;
-    }
-
-    .playerTitle p {
-        padding-top: 0.8rem;
-        font-family: 'Roboto Condensed', sans-serif;
-        color: black;
-        font-weight: 400;
-        font-size: 0.8rem;
-    }
-
-    .playerVideo {
-        width: 100%;
-        height: 500rem;
-    }
-
-    .videoFooter {
-        grid-column: 2 / 12;
-        text-align: center;
-        font-size: 0.75rem;
-        margin-top: 1rem;
-    }
-
-    .borda {
-        display: none;
-    }
-}
-
-/* Estilos para smartphones */
 @media (max-width: 576px) {
-    .videoComponent {
-        grid-column: 1 / 13;
-        font-family: 'Roboto', sans-serif;
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: 9rem auto 3rem;
-        justify-content: center;
-        background-color: #FCBA5A;
-        border-top-left-radius: 100px;
+    .videoContainer {
+        grid-template-columns: 1fr;
         padding: 1rem;
     }
 
-    .formaLinha {
-        display: none; /* Esconde a forma linha */
+    .videoBox {
+        grid-column: 1;
     }
 
-    .playerContent {
-        grid-column: 1 / 13;
-        grid-row: 2 / 4;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .playerHeader {
-        grid-column: 1 / 13;
-        grid-row: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        margin: .5rem 1rem;
-    }
-
-    .playerHeader img {
-        height: 2.5rem;
-    }
-
-    .playerTitle {
-        flex: 1;
-        border-top: 2px solid #eee;
-        padding: 0.5rem;
-        color: #6F2282;
-        font-weight: 500;
-        text-align: center;
-    }
-
-    .playerTitle span {
-        font-weight: 600;
-        text-transform: uppercase;
-    }
-
-    .playerTitle p {
-        font-family: 'Roboto Condensed', sans-serif;
-        color: black;
-        font-weight: 400;
-        font-size: 0.7rem;
-    }
-
-    .playerVideo {
+    .video {
         width: 100%;
-        height: 30rem;
-    }
-
-    .videoFooter {
-        grid-column: 1 / 13;
-        text-align: center;
-        font-size: 0.75rem;
-        margin-top: 1rem;
-    }
-
-    .borda {
-        display: none;
+        height: 100%;
     }
 }
