--- a/src/components/main/boxes/whiteboxes/WhiteBox.module.css
+++ b/src/components/main/boxes/whiteboxes/WhiteBox.module.css
@@ -7,6 +7,7 @@
         grid-template-columns: repeat(12, 1fr);
         justify-items: center;
         align-items: center;
+        padding: 3rem 0;
     }
 
     .whiteBox {
